spacing fixed?

--- a/myproject/static/css/report.css
+++ b/myproject/static/css/report.css
@@ -51,26 +51,32 @@ body {
 .header,
 .marketing,
 .footer {
-  padding-right: 15px;
-  padding-left: 15px;
+  margin-right: 30px;
+  margin-left: 30px;
 }
 
 /* Custom page header */
 .header {
   padding-bottom: 20px;
   font-size: 10px;
+  margin-right: 30px;
+  margin-left: 30px;
   /*border-bottom: 1px solid #e5e5e5;*/
   /*background-color: #eddf18;*/
   
 }
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
+  margin-right: 30px;
+  margin-left: 30px;
   margin-top: 0;
   margin-bottom: 0;
   /*line-height: 40px;*/
   font-size: 20px;
 }
 .header h1 {
+  margin-right: 30px;
+  margin-left: 30px;
   text-align: center;
   margin-top: 0;
   margin-bottom: 0;
@@ -79,12 +85,16 @@ body {
 }
 
 .header h2 {
+  margin-right: 30px;
+  margin-left: 30px;
 	text-align: left-side;
 	font-size: 25px;
 	
 }
 
 .header h4 {
+  margin-right: 30px;
+  margin-left: 30px;
   margin-top: 0;
   margin-bottom: 0;
   line-height: 40px;
@@ -97,8 +107,8 @@ body {
   color: #777;
   border-top: 1px solid #e5e5e5;
   font-size: 10px;
-  padding-right: 15px;
-  padding-left: 15px;
+  margin-right: 30px;
+  margin-left: 30px;
 }
 
 .footer f1 {
@@ -106,8 +116,8 @@ body {
   color: #777;
   border-top: 1px solid #e5e5e5;
   font-size: 15px;
-  padding-right: 15px;
-  padding-left: 15px;
+  margin-right: 30px;
+  margin-left: 30px;
 }
 
 /* Customize container */
@@ -122,11 +132,15 @@ body {
 
 /* Main marketing message and sign up button */
 .jumbotron {
+	  margin-right: 30px;
+  margin-left: 30px;
   text-align: center;
   /*border-bottom: 1px solid #e5e5e5;*/
 }
 
 .jumbotron j1{
+	  margin-right: 30px;
+  margin-left: 30px;
   /*border-bottom: 1px solid #e5e5e5;*/
     text-align: center;
  /* border-bottom: 1px solid #e5e5e5;*/
@@ -134,6 +148,8 @@ body {
   
   }
 .jumbotron j2{
+	  margin-right: 30px;
+  margin-left: 30px;
   text-align: center;
   font-size: 30px;
 	
@@ -176,6 +192,10 @@ body {
 	background-color: #000000;
 	color: #ffffff;
 }
+.active{
+	background-color: #000000;
+	color: #ffffff;
+}
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
@@ -183,12 +203,14 @@ body {
   .header,
   .marketing,
   .footer {
-    padding-right: 15px;
-    padding-left: 15px;
+    margin-right: 30px;
+    margin-left: 30px;
   }
   /* Space out the masthead */
   .header {
     margin-bottom: 30px;
+	  margin-right: 30px;
+  margin-left: 30px;
   }
   /* Remove the bottom border on the jumbotron for visual effect */
   /*.jumbotron {
